2011-08-20  Colomban Wendling  <colomban(at)geany(dot)org>

 * tagmanager/haskell.c:
   Fix tags for one-letter Haskell symbols (closes #3289160).


2011-08-19  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * doc/plugins.dox:
   Update of wording to fix some grammatical issues etc. on plugin howto.
   Patch provided by Matthew Brush. Thanks.
 * data/filetype_extensions.conf:
   Extend list of primary keywords. Patch by Alexander Eberspächer. Thanks.


2011-08-19  Colomban Wendling  <colomban(at)geany(dot)org>

 * data/filetype_extensions.conf, data/filetypes.Cython.conf,
   data/filetypes.python:
   Add Cython filetype (patch by Matthew Brush, thanks).
 * src/symbols.c, tagmanager/include/tm_workspace.h,
   tagmanager/tm_workspace.c:
   Create temporary files used for generating global tags files in the
   system directory for temp files.
 * tagmanager/diff.c:
   Don't make tags for /dev/null in diff files but for the new file
   instead (Based on a patch by Yang Hong, thanks).


2011-08-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * doc/plugins.dox:
   Update API version used inside plugin howto to a more recent version
   (API v211).


2011-08-13  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/msgwindow.c, src/msgwindow.h, src/ui_utils.c, src/ui_utils.h:
   Focus the editor upon double click on the message and compiler
   windows (patch by Dimitar Zhekov, thanks).


2011-08-03  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/geany.h, plugins/classbuilder.c, plugins/export.c,
   plugins/filebrowser.c, plugins/htmlchars.c, plugins/saveactions.c,
   plugins/splitwindow.c:
   Only include config.h when building Geany (closes #3384026).


2011-07-31  Frank Lanitz  <frlan@frank.uvena.de>

 * doc/plugins.dox:
   Adding some content about PLUGIN_SET_TRANSLATABLE_INFO() into plugin
   HowTo as well as a hint to make usage of main_locale_init().


2011-07-28  Colomban Wendling  <colomban(at)geany(dot)org>
